--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
 
-  <small>This project is maintained by <a href="https://www.danurbanowicz.com" rel="noopener">Dan Urbanowicz</a>. View the repo on <a href="https://github.com/danurbanowicz/jekyll-netlify-boilerplate" rel="noopener">Github</a></small>
+  <small>Curated by <a href="https://www.creinhardt.com" rel="noopener">Chris Reinhardt</a>. View the repo on <a href="https://github.com/cjreinhardt/vintage-bike-maps" rel="noopener">Github</a></small>
 
 </footer>
