--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -95,3 +95,16 @@ header > h1 {
     text-align: left;
   }
 }
+
+// Added blockquote styles
+
+blockquote {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: .75em 0 .75em -2.2em;
+    padding: 0 0 0 1.75em;
+    border-left: #4A4A4A 0.4em solid;
+}
+blockquote p {
+    font-style: italic;
+}
