--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -89,6 +89,8 @@ a:active {
 }
 
 header > h1 {
+  font-family: 'Playfair Display',Georgia,"Times New Roman",serif;
+  font-weight: 800;
   line-height: $base-line-height;
   font-weight: $base-font-weight;
   @media screen and (min-width: $screen-sm-min) {
