--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -64,6 +64,7 @@ header > nav {
   ul {
     // flexbox is better than grid for distributing an unknown qty of children
     display: flex;
+    margin-top: .5em;
     li {
       margin-right: 2rem;
       display: inline-block;
