--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,5 @@
   {% endif %}
   <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+  {% seo %}
 </head>
