--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,7 +10,7 @@ layout: default
 
 <section>
 
-  <h3>Posts</h3>
+  <h3>Recent posts</h3>
 
   <ul>
     {% for post in site.posts %}
@@ -19,13 +19,14 @@ layout: default
         <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
         <time datetime="{{ post.date }}">
           <small>
-            <strong>{{ post.date | date_to_string }}</strong>
+            <strong>{{ post.date | date: "%m/%d/%Y"  }}</strong>
             {% if author %}
               by {{ author.name }}
             {% endif %}
           </small>
         </time>
-        {{ post.excerpt | strip_newlines | truncate: 180 }}
+        {{ post.excerpt }}
+        <small><a href="{{ post.url }}" class="readMore">Read more</a></small>
       </li>
     {% endfor %}
   </ul>
