--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,13 +19,14 @@ layout: default
         <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
         <time datetime="{{ post.date }}">
           <small>
-            <strong>{{ post.date | date_to_string }}</strong>
+            <strong>{{ post.date | date: "%m/%d/%Y"  }}</strong>
             {% if author %}
               by {{ author.name }}
             {% endif %}
           </small>
         </time>
         {{ post.excerpt }}
+        <small><a href="{{ post.url }}" class="readMore">Read more</a></small>
       </li>
     {% endfor %}
   </ul>
