--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -115,7 +115,7 @@ main {
 }
 
 // blog posts list
-html[data-current="blog"] main > section {
+html[data-current="blog"] main > section, html[data-current="home"] main > section {
   ul li {
     padding: 2rem 0;
     border-bottom: 0.05em solid $hairline-color;
