--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 
 <time datetime="{{ page.date }}">
   <small>
-    <strong>{{ page.date | date_to_string }}</strong>
+    <strong>{{ post.date | date: "%-m/%d/%Y"  }}</strong>
     {% if author %}
       by {{ author.name }}
     {% endif %}
