--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ layout: default
         <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
         <time datetime="{{ post.date }}">
           <small>
-            <strong>{{ post.date | date: "%m/%d/%Y"  }}</strong>
+            <strong>{{ post.date | date: "%-m/%d/%Y"  }}</strong>
             {% if author %}
               by {{ author.name }}
             {% endif %}
