--- a/_layouts/maps-by-state.html
+++ b/_layouts/maps-by-state.html
@@ -8,8 +8,20 @@ layout: default
 
 {{ content }}
 
-  <ul class="categories-list">
-    {% for categories in site.categories %}
-    <li><a href="#{{ categories[0] | slugify }}" class="post-category">{{ categories[0] }}</a></li>
+ <div id="archives">
+{% assign sorted_cats = site.categories | sort %}
+{% for category in sorted_cats %}
+  <div class="archive-group">
+    {% capture category_name %}{{ category | first }}{% endcapture %}
+    <div id="#{{ category_name | slugize }}"></div>
+
+    <h3 class="category-head">{{ category_name }}</h3>
+    <a name="{{ category_name | slugize }}"></a>
+    {% for post in site.categories[category_name] %}
+    <article class="archive-item">
+      <h4><a href="{{ site.baseurl }}{{ post.url }}">{{post.title}}</a></h4>
+    </article>
     {% endfor %}
-  </ul>
+  </div>
+{% endfor %}
+</div>
