--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,10 +19,11 @@ layout: default
 {% if page.featured_image %}
   {% if page.featured_image_fullsize_link %}
       <a href="{{ page.featured_image_fullsize_link }}">
-    {% else %}
-      <a href="{{ page.page.featured_image}}">
     {% endif %}
-    <img src="{{ page.featured_image }}" alt="{{ page.featured_image_alt }}" title="{{ page.featured_image_alt }}" class="featuredimage"></a>
+    <img src="{{ page.featured_image }}" alt="{{ page.featured_image_alt }}" title="{{ page.featured_image_alt }}" class="featuredimage">
+   {% if page.featured_image_fullsize_link %}
+      </a>
+    {% endif %}
 {% endif %}
 
 {{ content }}
