--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -185,3 +185,18 @@ footer {
 small a.readMore{
   color:#FF4A4A;
 }
+
+.fullsizelink{
+  display:block;
+  text-align: right;
+  font-size: .7em;
+  border-bottom:0px;
+}
+
+img.featuredimage {
+    margin-bottom: 2rem;
+    }
+
+a.imagelink{
+  border:0px;
+}
