Tweaked featured image group formatting

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,12 +16,12 @@ layout: default
 
 {% include page-intro.html %}
 
-{% if page.featured_image %}
-  {% if page.featured_image_fullsize_link %}
-       <a href="{{ page.featured_image_fullsize_link }}" class="fullsizelink">View full size version</a><a href="{{ page.featured_image_fullsize_link }}" class="imagelink">
+{% if page.featured_image.image %}
+  {% if page.featured_image.image_fullsize_link %}
+       <a href="{{ page.featured_image.image_fullsize_link }}" class="fullsizelink">View full size version</a><a href="{{ page.featured_image.image_fullsize_link }}" class="imagelink">
     {% endif %}
-    <img src="{{ page.featured_image }}" alt="{{ page.featured_image_alt }}" title="{{ page.featured_image_alt }}" class="featuredimage">
-   {% if page.featured_image_fullsize_link %}
+    <img src="{{ page.featured_image.image }}" alt="{{ page.featured_image.image_alt }}" title="{{ page.featured_image.image_alt }}" class="featuredimage">
+   {% if page.featured_image.image_fullsize_link %}
       </a>
     {% endif %}
 {% endif %}
