--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,9 +25,9 @@ layout: default
             {% endif %}
           </small>
         </time>
-        {% if post.featured_image %}
+        {% if post.featured_image.image %}
              <a href="{{ post.url }}">
-            <img src="{{ post.featured_image }}" alt="{{ post.featured_image_alt }}" title="{{ post.featured_image_alt }}" class="featuredimage"></a>
+            <img src="{{ post.featured_image.image }}" alt="{{ post.featured_image.image_alt }}" title="{{ post.featured_image.image_alt }}" class="featuredimage"></a>
         {% endif %}
         {{ post.excerpt }}
         <small><a href="{{ post.url }}" class="readMore">Read more</a></small>
